--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '2.4'
 
 services:
   app:
@@ -35,8 +35,8 @@ services:
       dockerfile: Dockerfile.vis
     command: node server.js
     entrypoint: /docker-entrypoint.sh
-    ports:
-      - "8095:8000"
+    #ports:
+    #  - "8095:8000"
     volumes:
       - ./nodemodules:/usr/src/app/node_modules
 
