--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.web
-    networks:
-      - nginx-docker_interna
-    #ports:
-    #  - "8095:80"
+    ports:
+      - "127.0.0.1:8090:80"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 1m30s
@@ -35,15 +33,9 @@ services:
       dockerfile: Dockerfile.vis
     command: node server.js
     entrypoint: /docker-entrypoint.sh
-    networks:
-      - nginx-docker_interna
-    #ports:
-    #  - "8095:8000"
+    ports:
+      - "127.0.0.1:8095:8000"
     volumes:
       - ./nodemodules:/usr/src/app/node_modules
       - ./diarios:/usr/src/app/diarios:ro
       - /etc/localtime:/etc/localtime:ro
-
-networks:
-  nginx-docker_interna:
-    external: true
